代码与配置文件/16/ingress-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingress-app1
  name: ingress-app1
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: ingress-app1
  template:
    metadata:
      labels:
        app: ingress-app1
    spec:
      containers:
      - image: collenzhao/ingress-app1
        name: ingress-app2
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: service-app1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:     
    app: ingress-app1
  type: NodePort
