代码与配置文件/16/ingress-app.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-app
spec:
  rules:
  - host: develop.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-app1
          servicePort: 80
  - host: product.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-app2
          servicePort: 80
